# XBuddy-Desktop-PyQt5

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  start_pet.py  tox.ini
.github/workflows/: lint.yml
.husky/: pre-commit
app/: __init__.py
app/api/: __init__.py  chat_ws_client.py  check_api.py  client.py  endpoints.py  news_ws_client.py
app/core/: __init__.py  app_manager.py  config_manager.py  event_system.py
app/gui/: __init__.py  main_window.py  tray_icon.py
app/gui/live2d/: __init__.py  animated_widget.py  base_widget.py  button_widget.py  draggable_widget.py  lip_sync_widget.py  penetration_widget.py  pet_widget.py
app/gui/widgets/: __init__.py  chat_widget.py  chat_window_widget.py  check_url.py  news_widget.py  pet_widget.py  settings_widget.py  simple_canvas.py  url_notification.py
app/live2d/: __init__.py  model_manager.py  motion_manager.py  renderer.py
app/model/: news_model.py
app/services/: __init__.py  browser_monitor_service.py
resources/: style.css
scripts/: build.bat  build_fake_server.bat
tests/: __init__.py  test_app.py
xbuddy/: main.py  settings.py
xbuddy/api/: fake_server.py  utils.py
xbuddy/api/fake_server/: fake_server.py  news.json
xbuddy/api/schemas/: news.py
xbuddy/gui/: main_window.py  utils.py
xbuddy/gui/pet_widgets/: __init__.py  base_widget.py  button_widget.py  lip_sync_widget.py  motion_widget.py  move_widget.py  penetration_widget.py
xbuddy/gui/widgets/: base_widgets.py  button_window.py  settings_window.py  tray_icon.py
