[build-system]
requires = ["setuptools>=60.0"]
build-backend = "setuptools.build_meta"
[project]
name = "xbuddy"
version = "0.0.1"
authors = [
    { name = "XBuddy-Desktop-PyQt5 Developers", email = "example@example.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt5",
    "pyqt5-qt5==5.15.2",
    "live2d-py",
    "pydantic",
    "aiohttp",
    "pyinstaller>=6.13.0",
]

[dependency-groups]
dev = [
    "build",
    "twine",

    "coverage",
    "pytest",
    "tox",
    "mypy",
    "ruff",
    "pre-commit",

    "sphinx",
    "sphinx-autobuild",

    "jinja2",
    "python-dotenv",
    "rtoml",
    "beautifulsoup4",
    "click",

    "types-setuptools"
]

[tool.uv]
default-groups = "all"

[tool.setuptools]
include-package-data = true
packages = ["xbuddy"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "tests"
]

[tool.ruff]
extend-exclude = [
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "E501"
]

[tool.mypy]
exclude = [
]
